# jaraco.collections

./: .coveragerc  .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  NEWS.rst  README.rst  README.txt  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: FUNDING.yml
docs/: conf.py  index.rst
jaraco/: collections.py
jaraco/collections/: __init__.py
jaraco/collections/compat/: py38.py
jaraco/util/: collections.py  dictlib.py
newsfragments/: +068d18a0.bugfix.rst  +2ac0047f.feature.rst  +4eee6698.removal.rst  +5de686ab.feature.rst  +7e0bb049.feature.rst  +a7ca2400.bugfix.rst  16.feature.rst
src/jaraco/util/: dictlib.py
tests/: test_collections.py  test_dictlib.py
